# semihdp-scripts

./: .gitmodules  Analyze Simulations.ipynb  CMakeLists.txt  README.md  run_from_file.cpp  run_simulation1.cpp  run_simulation2.cpp  run_simulation_many.cpp  semihdp.py  semihdp_params.asciipb  utils.cpp  utils.hpp
example/: data.csv
